# yew_portfolio

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
assets/: nav.json
src/: lib.rs  main.rs  router.rs
src/components/: mod.rs
src/components/about/: About.tsx  Experiences.tsx  Formation.tsx  Interfaces.ts  Languages.tsx  about.rs  experience.rs  experiences.rs  formation.rs  interfaces.rs  languages.rs  mod.rs  techno.rs  technos.rs
src/components/about/FormationComponent/: FormationDescription.tsx  FormationPlace.tsx  index.ts
src/components/about/formation_component/: formation_description.rs  formation_name.rs  formation_place.rs  formation_year.rs  mod.rs
src/components/button/: Button.rs  Button.tsx  button.rs  color_theme_button.rs  mod.rs
src/components/footer/: Footer.tsx  footer.rs
src/components/home/: home.rs
src/components/navbar/: Nav.tsx  mod.rs  navbar.rs
src/components/navbar/navComponent/: NavItem.tsx
src/components/navbar/navbar_component/: mod.rs  nav_item.rs
src/components/profile/: Home.tsx  profile.rs
src/components/project/: mod.rs  project.rs  projects.rs
src/pages/: home.rs
src/style/: app.css  main.css  reset.css
