[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.21", features = ["csr"]}
yew-router = "0.18"
stylist = { version = "0.13", features = ["yew"]}
serde = { version = "1" }
serde_json = { version = "1" , features = ["std"]}
gloo = { version = "0.10" }
yew-hooks = {version = "0.3.0"}

[dependencies.web-sys]
version = "0.3.60"

features = [
    "Window","console","Document","MediaQueryList","DomTokenList", "Element", "HtmlElement","MouseEvent","DomRect","ViewTransition",
]
